--- a/testing-compose.yaml
+++ b/testing-compose.yaml
@@ -1,42 +1,33 @@
 version: '3'
 services:
-  mysql-testing:
+  mysql:
     image: mysql:latest
     container_name: mysql-container
     env_file:
       - .env.testing
-    environment:
-      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
-      - MYSQL_DATABASE=${DB_NAME}
-      - MYSQL_USER= ${DB_USERNAME}
-      - MYSQL_PASSWORD= ${DB_PASSWORD}
     volumes:
-      - mysql-data:/var/lib/mysql
+      - mysql-testing-data:/var/lib/mysql
+      - ./init-scripts/init.sql:/docker-entrypoint-initdb.d/0.sql
     ports:
       - 3306:3306
     networks:
       - my-network
-
-  flask-test:
+    command: --default-authentication-plugin=mysql_native_password
+        
+  flask-app:
     build:
       context: .
       dockerfile: Dockerfile
     env_file:
       - .env.testing
-    environment:
-      - DB_USERNAME=${DB_USERNAME}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_HOST=mysql-container
-      - DB_NAME=${DB_NAME}
-      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
     ports:
       - 5000:5000
     networks:
       - my-network
-    command: sh -c "pip install cryptography==40.0.2 pytest==7.3.1 && wait-for-it.sh mysql-container:3306 -t 60 && flask db upgrade && python -m pytest -s ./app/tests"
+    command:  sh -c "pip install cryptography==40.0.2 pytest==7.3.1 && wait-for-it.sh mysql-container:3306 -t 60 && flask db upgrade && python -m pytest -s ./app/tests"
     
 volumes:
-  mysql-data:
+  mysql-testing-data:
 
 networks:
   my-network:
