--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   mysql:
     image: mysql:latest
@@ -13,7 +13,7 @@ services:
     networks:
       - my-network
     command: --default-authentication-plugin=mysql_native_password
-        
+
   flask-app:
     build:
       context: .
@@ -24,8 +24,8 @@ services:
       - 5000:5000
     networks:
       - my-network
-    command: sh -c "pip install cryptography==40.0.2 && wait-for-it.sh mysql-container:3306 -t 60 && flask db init && flask db migrate && echo updating && flask db upgrade && flask run --host=0.0.0.0"
-    
+    command: sh -c "pip install cryptography==40.0.2 && wait-for-it.sh mysql-container:3306 -t 60 && flask db init || flask db migrate && echo updating && flask db upgrade && flask run --host=0.0.0.0"
+
 volumes:
   mysql-data:
 
