added cors to .env config

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_NAME=movie_app
 DB_HOST=mysql-container
 JWT_SECRET_KEY=your_secret_key
 SESSION_SECRET=session_secret_key
+CORS_ORIGINS=http://localhost
